Fix section gaps

--- a/style.scss
+++ b/style.scss
@@ -233,7 +233,7 @@ img {
   font: 16px "Inter", sans-serif;
   border-left: solid thick navy;
   padding-left: 10px;
-  margin: 10px auto;
+  margin: 15px auto;
   line-height: 100%;
 }
 
@@ -257,7 +257,7 @@ img {
   font: 8px "Inter", sans-serif;
   font-weight: 500;
   border: solid thin #000;
-  padding: 5px auto;
+  padding: 5px;
 }
 
 /**************************************
